getting circle ci to work