@@ -4,8 +4,45 @@
  * This is a general purpose Gradle build.
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
  */
-ant.importBuild 'build.xml'
+  apply plugin: 'java'
+
+//ant.importBuild 'build.xml'
  
+ test {
+   // enable TestNG support (default is JUnit)
+   useTestNG()
+   // enable JUnit Platform (a.k.a. JUnit 5) support
+   useJUnitPlatform()
+
+   // set a system property for the test JVM(s)
+   systemProperty 'some.prop', 'value'
+
+   // explicitly include or exclude tests
+   include 'main/test/server/src/**'
+
+   // show standard out and standard error of the test JVM(s) on the console
+   testLogging.showStandardStreams = true
+
+   // set heap size for the test JVM(s)
+   minHeapSize = "128m"
+   maxHeapSize = "512m"
+
+   // set JVM arguments for the test JVM(s)
+   jvmArgs '-XX:MaxPermSize=256m'
+
+   // listen to events in the test execution lifecycle
+   beforeTest { descriptor ->
+      logger.lifecycle("Running test: " + descriptor)
+   }
+
+   // Fail the 'test' task on the first test failure
+   failFast = true
+
+   // listen to standard out and standard error of the test JVM(s)
+   onOutput { descriptor, event ->
+      logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+   }
+ }
 
 
 /*task buildAnt(type: Build, group: "Building", description: "Runs the ant script")
